# aiconsole_with_local_db

./: README.md  pyproject.toml
backend/aiconsole/: app.py
backend/aiconsole/api/: routers.py
backend/aiconsole/core/assets/: assets.py
backend/aiconsole/core/assets/db/: assets_db_storage.py
backend/aiconsole/core/chat/: chat.py
backend/aiconsole/core/db/: __init__.py  database.py  migrate.py  migration.py  models.py  operations.py
backend/aiconsole/core/project/: init.py  paths.py  project.py
backend/aiconsole/core/settings/: settings.py
backend/aiconsole/core/storage/: db_storage.py
